fix bug with empty area in nav bar on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,10 @@ body {
 
 
 /* Nav Bar */
-.navbar{
-  width: 100%;
-}
+
 .avatar_menu {
-    height: 20px;
-    width: 20px;
-    display: inline-block;
-    overflow: hidden;
-    line-height: 1;
-    vertical-align: middle;
-    border-radius: 3px;
+    height: 1.5rem;
+    width: 1.5rem;
 }
 
 
